--- a/project/html/board/boardModify.html
+++ b/project/html/board/boardModify.html
@@ -12,11 +12,12 @@
     
     <link rel="stylesheet" href="../../asset/css/header.css">
     <link rel="stylesheet" href="../../asset/css/board/boardLoginBanner.css">
-    <link rel="stylesheet" href="../../asset/css/board/boardModify.css">
     <link rel="stylesheet" href="../../asset/css/board/boardImageType.css">
+    <link rel="stylesheet" href="../../asset/css/board/boardModify.css">
     <link rel="stylesheet" href="../../asset/css/footer.css">
 </head>
 
+<!-- header -->
 <header id="header" class="header__wrap">
     <div class="header__inner container">
         <div class="header__logo">
@@ -39,9 +40,11 @@
         </div>                
     </div>
 </header>
+<!-- //header -->
 
 <body>
 
+    <!-- boardLoginBanner -->
     <section id="boardLoginBanner" class="loginBanner">
         <h2 class="blind">dd</h2>
         <div class="lB__inner">
@@ -61,18 +64,22 @@
             </div>
         </div>
     </section>
+    <!-- //boardLoginBanner -->
 
+    <!-- boardImageType -->
     <section id="boardImageType" class="imageType">
         <div class="imageType__inner">
             <h2>COMMUNITY</h2>
             <p>좋은 글로 여러 정보를 나눠주세요!</p>
         </div>
     </section>
+    <!-- //boardImageType -->
 
-    <section id="boardWrite">
+    <!-- boardModify -->
+    <section id="boardModify">
         <div class="board__wrap container">
             <h3>제목 :</h3>
-            <div class="board__write">                
+            <div class="board__modify">                
                 <div class="Option">
                     <select name="searchOption" id="searchOption1" class="Write__option">
                         <option value="Category">CATEGORY</option>
@@ -92,7 +99,7 @@
                     <span class="button"><a href="#">임시저장</a></span>                            
                 </div>
                 <div class="image">
-                    <img src="../../asset/img/dog1.jpg" alt="강아지 사진">
+                    <img src="../../asset/img/dogImage.jpg" alt="강아지 사진">
                 </div>   
             </div>
         <div class="board__contents">
@@ -104,15 +111,18 @@
         </div>
         </div>        
     </section>
+    <!-- //boardModify -->
     
 </body>
 
+<!-- footer -->
 <footer id="footer" class="footer">
     <h2>
         winimal Copyright 2022. All Rights Reserved
         <button><a href="">문의하기</a></button>
     </h2>
 </footer>
+<!-- //footer -->
 
 <script src="../../asset/js/header_hamburger.js"></script>
 
