--- a/project/index.html
+++ b/project/index.html
@@ -133,7 +133,7 @@
             <br>
             <ul>
                 <p>게시판</p>
-                <li>🐕 게시판 메인 ✔<a href="figma/board.html"> board.html</a></li>
+                <li>🐕 게시판 메인 ✔<a href="figma/boardM.html"> board.html</a></li>
                 <li>🐕 게시판 글보기 ✔<a href="figma/boardView.html"> boardView.html</a></li>
                 <li>🐕 게시판 글쓰기 ✔<a href="figma/boardWrite.html"> boardWrite.html</a></li>
                 <li>🐕 게시판 글수정하기 ✔<a href="figma/boardModify.html"> boardModify.html</a></li>
@@ -178,7 +178,7 @@
             <br>
             <ul>
                 <p>게시판</p>
-                <li>🐶 게시판 메인 ✔<a href="html/board/board.html"> board/board.html</a></li>
+                <li>🐶 게시판 메인 ✔<a href="html/board/boardMain.html"> board/boardMain.html</a></li>
                 <li>🐶 게시판 글쓰기 ✔<a href="html/board/boardWrite.html"> board/boardWrite.html</a></li>
                 <li>🐶 게시판 글보기 ✔<a href="html/board/boardView.html"> board/boardView.html</a></li>
                 <li>🐶 게시판 글수정하기 ✔<a href="html/board/boardModify.html"> board/boardModify.html</a></li>
