--- a/javascript/effect/gameEffect01.html
+++ b/javascript/effect/gameEffect01.html
@@ -101,8 +101,8 @@
             </div>
             <div class="music__footer">
                 <div class="music__list">
-                    <h3><span class="list"></span>MUSIC LIST</h3>
-                    <ul>
+                    <h3><span class="list"></span>MUSIC LIST<a href="#" class="close"></a></h3>
+                    <ul class="musicList">
                         <!-- <li>
                             <strong>제목</strong>
                             <em>아티스트</em>
