--- a/project/html/login/loginpopup.html
+++ b/project/html/login/loginpopup.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="../../asset/css/login/login.css">
 </head>
 <body>
-    <div class="login_btn">로그인</div>
-    <div class="login__popup">
+    <div class="login_btn blind">로그인</div>
+    <div class="loginPop__popup">
         <div class="login__inner">
             <div class="login__header">
                 <h3>winimal Login</h3>
