--- a/project/html/login/findID_confirm.html
+++ b/project/html/login/findID_confirm.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -13,21 +12,20 @@
     <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
     
     <!-- 아이디찾음 CSS -->
-    <link rel="stylesheet" href="../../asset/css/login/idPassConfirm.css">
-
+    <link rel="stylesheet" href="../../asset/css/login/idConfirm.css">
 </head>
 <body>
-    <div class="login__popup score inner_height">
+    <div class="loginId__popup score inner_height">
         <div class="login__inner">
             <div class="login__header">
                 <h3><a href="findID.html">I.D/P.W 찾기</a></h3>
             </div>
             <div class="tab_menu">
                 <span class="id active">ID</span> <em>|</em> <span class="pass"><a href="findID.html">Password</a></span>
-                <div class="search_contents">
+                <div class="idSearch_contents">
                     <h4 class="user_search">아이디 찾기</h4>
                     <div class="id_find">
-                        <figure class="findLogo">
+                        <figure class="idFindLogo">
                             <img src="../../asset/img/loginFind.jpg" alt="">
                         </figure>
                         <p>당신의 소중한 아이디를 찾았습니다!</p>
