--- a/project/html/login/findPW_confirm.html
+++ b/project/html/login/findPW_confirm.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
     
     <!-- 비밀번호 찾음 CSS -->
-    <link rel="stylesheet" href="../../asset/css/login/idPassConfirm.css">
+    <link rel="stylesheet" href="../../asset/css/login/PassConfirm.css">
 
 
 
@@ -22,17 +22,17 @@
     </style>
 </head>
 <body>
-    <div class="login__popup score inner_height2">
+    <div class="loginPw__popup score pwInner_height">
         <div class="login__inner">
             <div class="login__header">
                 <h3><a href="findID.html">I.D/P.W 찾기</a></h3>
             </div>
             <div class="tab_menu">
                 <span class="id"><a href="findID.html">ID</a></span> <em>|</em> <span class="pass active">Password</span>
-                <div class="search_contents">
+                <div class="pwSearch_contents">
                     <h4 class="user_search">비밀번호 재설정</h4>
-                    <div class="id_find2">
-                        <figure class="findLogo2">
+                    <div class="pw_find">
+                        <figure class="pwFindLogo">
                             <img src="../../asset/img/loginFind.jpg" alt="">
                         </figure>
                         <p>비밀번호 재설정이<br> 완료되었습니다!</p>
