--- a/javascript/effect/gameEffect01.html
+++ b/javascript/effect/gameEffect01.html
@@ -74,6 +74,9 @@
                     <div class="title">
                         <h3>LAKEY INSPIRED</h3>
                         <p>Blue Boi</p>
+                        <div class="volume">
+                            <input type="range" id="volume-control" min="0" max="10">							
+                        </div> 
                     </div>
                 </div>
                 <div class="music__control">
