--- a/javascript/effect/gameEffect01.html
+++ b/javascript/effect/gameEffect01.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../assets/css/bg.css">
     <link rel="stylesheet" href="../assets/css/game.css">
     <link rel="stylesheet" href="../assets/css/music.css">
+    <link rel="stylesheet" href="../assets/css/font.css">
 </head>
 <body>
 
@@ -36,7 +37,7 @@
             </div>
             <div class="icon03">
                 <img src="../assets/img/music/foldershop.svg" alt="">
-                <span>shop</span>
+                <span>SHOP</span>
             </div>
             <div class="icon04">
                 <img src="../assets/img/music/folderFile.svg" alt="">
@@ -74,8 +75,8 @@
                     <div class="title">
                         <h3>LAKEY INSPIRED</h3>
                         <p>Blue Boi</p>
-                        <div class="volume">
-                            <input type="range" id="volume-control" min="0" max="10">							
+                        <div>
+                            <input class="volume" type="range" id="volume-control" min="0" max="10">							
                         </div> 
                     </div>
                 </div>
@@ -115,10 +116,104 @@
                 </div>
             </div>
         </div>
+
+        <!-- footer -->
+        <footer id="footer">
+            <div class="modal__wrap">
+                <div class="modal__btn">CODE</div>
+                <div class="modal__cont">
+                    <div class="modal__box">
+                            <div class="title">
+                                <span class="dot" aria-label="true"></span>
+                                <div class="tabs">
+                                    <div class="active">
+                                        <span class="favicon">
+                                            <svg width="16" height="16" viewBox="0 0 18 18" fill="navy" aria-hidden="true" focusable="false">
+                                                <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                                <path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"></path>
+                                                <path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill=yellow></path>
+                                            </svg>
+                                        </span>
+                                        <em>Javascript</em>
+                                        <span class="close">
+                                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                                <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                            </svg>
+                                        </span>
+                                    </div>
+                                    <div>
+                                        <span class="favicon">
+                                            <svg width="16" height="16" viewBox="0 0 18 18" fill="navy" aria-hidden="true" focusable="false">
+                                                <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                                <path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"></path>
+                                                <path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill=yellow></path>
+                                            </svg>
+                                        </span>
+                                        <em>HTML</em>
+                                        <span class="close">
+                                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                                <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                            </svg>
+                                        </span>
+                                    </div>
+                                    <div>
+                                        <span class="favicon">
+                                            <svg width="16" height="16" viewBox="0 0 18 18" fill="navy" aria-hidden="true" focusable="false">
+                                                <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                                <path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"></path>
+                                                <path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill=yellow></path>
+                                            </svg>
+                                        </span>
+                                        <em>CSS</em>
+                                        <span class="close">
+                                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                                <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                            </svg>
+                                        </span>
+                                    </div>
+                                </div>
+                                <span class="plus" arra-label="true">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                        <path d="M2.5 8H13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        <path d="M8 2.5V13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                    </svg>
+                                </span>
+                            </div>
+                            <div class="cont">
+                                <div class="active">
+    <pre><code class="language-js">
+    </code></pre>
+                                </div>
+
+                                <div>
+    <pre><code class="language-js">
+    </code></pre>
+                                </div>
+                                
+                                <div>
+    <pre><code class="language-js">
+    </code></pre>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="modal__close">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                            <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
+    <script src="../assets/js/common.js"></script>
     <script src="../assets/js/gsap.min.js"></script>
     <script src="../assets/js/music.js"></script>
     
@@ -191,16 +286,16 @@
             const os = navigator.userAgent.toLocaleLowerCase();
 
             if(os.indexOf("window") >= 0) {
-                agent.innerText = "현재 윈도우 사용 중, 화면 크기 " + screen.width + " * " + screen.height;
+                agent.innerText = "WINDOW " + screen.width + " * " + screen.height;
                 document.querySelector("body").classList.add("window");
             } else if(ps.indexOf("macintosh") >=0) {
-                agent.innerText = "현재 맥을 사용 중"
+                agent.innerText = "MAC"
                 document.querySelector("body").classList.add("macintosh");
             } else if(ps.indexOf("iphone") >=0) {
-                agent.innerText = "현재 아이폰을 사용 중"
+                agent.innerText = "IPHONE"
                 document.querySelector("body").classList.add("iphone");
             } else if(ps.indexOf("android") >=0) {
-                agent.innerText = "현재 안드로이드를 사용 중"
+                agent.innerText = "ANDROID"
                 document.querySelector("body").classList.add("android");
             }
         }
