--- a/javascript/effect/searchEffect.html
+++ b/javascript/effect/searchEffect.html
@@ -52,7 +52,7 @@
                     <li>03. 서치 이펙트 : charAt()<a href="searchEffect03.html"> view</a></li>
                     <li>04. 서치 이펙트 : find()<a href="searchEffect04.html"> view</a></li>
                     <li>05. 서치 이펙트 : filter()<a href="searchEffect05.html"> view</a></li>
-                    <li>06. 서치 이펙트 : <a href="searchEffect06.html"> view</a></li>
+                    <li>06. 서치 이펙트 : sort(), reverse()<a href="searchEffect06.html"> view</a></li>
                 </ul>
             </div>
             <div class="main_sample">
