--- a/javascript/effect/quizeffect02.html
+++ b/javascript/effect/quizeffect02.html
@@ -151,278 +151,18 @@
 
                         <div class="cont">
                             <div class="active">
-<pre><code class="language-js">    // 선택자
-    const quizType = document.querySelector(".quiz__type");                     // 퀴즈 종류
-    const quizNumber = document.querySelector(".quiz__question .number");       // 퀴즈 번호
-    const quizAsk = document.querySelector(".quiz__question .ask");             // 퀴즈 질문
-    const quizConfirm = document.querySelector(".quiz__answer .confirm");       // 정답 확인 버튼
-    const quizResult = document.querySelector(".quiz__answer .result");         // 정답 결과
-    const quizInput = document.querySelector(".quiz__answer .input");           // 사용자 정답
-    const quizView = document.querySelector(".quiz__view");                     // 강아지
-
-    // 문제 출력
-    quizType.textContent = answerType;
-    quizNumber.textContent = answerNum + ". ";
-    quizAsk.textContent = answerAsk;
-    quizResult.textContent = "정답은 : " + answerResult + " 입니다."
-
-    // 정답 숨기기
-    quizResult.style.display = "none";
-
-    // 정답 확인
-    // 정답 버튼을 클릭 시
-    quizConfirm.addEventListener("click", () => {
-        quizInput.style.display = "none";
-        quizResult.style.display = "block";
-        quizConfirm.style.display = "none";
-
-        // 사용자 정답
-        const userWord = quizInput.value.toLowerCase().trim(); // 소문자 치환 및 여백 삭제
-        answerResult = answerResult.toLowerCase().trim();
-
-        // console.log(userWord)
-        // console.log(answerResult)
-
-        // 사용자 정답 == 문제 정답
-        if(userWord == answerResult) {
-            // 정답
-            //alert("정답입니다.")
-            quizView.classList.add("like");
-        } else {
-            // 오답
-            //alert("오답입니다.")
-            quizView.classList.add("dislike");
-        }
+<pre><code class="language-js">
     });
 </code></pre>
                             </div>
 
                             <div>
-<pre><code class="language-js">    &lt;main id="main">
-        &lt;div class="quiz__wrap">
-            &lt;div class="quiz">
-                &lt;span class="quiz__type">&lt;/span>
-                &lt;h2 class="quiz__question">
-                    &lt;span class="number">&lt;/span>
-                    &lt;div class="ask">
-                    &lt;/div>
-                &lt;/h2>
-                &lt;div class="quiz__view">
-                    &lt;div class="true">정답입니다.&lt;/div>
-                    &lt;div class="false">오답입니다.&lt;/div>
-                    &lt;div class="dog">
-                        &lt;div class="head">
-                            &lt;div class="ears">&lt;/div>
-                            &lt;div class="face">&lt;/div>
-                            &lt;div class="eyes">
-                                &lt;div class="teardrop">&lt;/div>
-                            &lt;/div>
-                            &lt;div class="nose">&lt;/div>
-                            &lt;div class="mouth">
-                                &lt;div class="tongue">&lt;/div>
-                            &lt;/div>
-                            &lt;div class="chin">&lt;/div>
-                        &lt;/div>
-                        &lt;div class="body">
-                            &lt;div class="tail">&lt;/div>
-                            &lt;div class="legs">&lt;/div>
-                        &lt;/div>
-                    &lt;/div>
-                &lt;/div>
-                &lt;div class="quiz__answer">
-                    &lt;input type="text" class="input" placeholder="정답을 적어주세요.">
-                    &lt;button class="confirm">정답 확인하기&lt;/button>
-                    &lt;div class="result">&lt;/div>
-                &lt;/div>
-            &lt;/div>
-        &lt;/div>
-    &lt;/main>
+<pre><code class="language-js">
 </code></pre>
                             </div>
 
                             <div>
-<pre><code class="language-js">    .quiz__wrap {
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
-        margin-top: 50px;
-        margin-bottom: 150px;
-        flex-wrap: wrap;
-    }   
-
-    .quiz {
-        max-width: 500px;
-        width: 100%;
-        background-color: #fff;
-        border: 8px ridge #cacaca;
-        margin: 10px;
-    }   
-
-    .quiz__type {
-        background-color: #cacaca;
-        text-align: center;
-        display: block;
-        font-size: 16px;
-        border: 3px ridge #cacaca;
-        color: #3b3b3b;
-        font-family: "DungGeunMo";
-        padding: 4px;
-    }   
-
-    .quiz__question {
-        border-top: 6px ridge #cacaca;
-        border-bottom: 6px ridge #cacaca;
-        padding: 20px;
-        font-family: "Cafe24Dangdanghae";
-        line-height: 1.3;
-    }   
-
-    .quiz__question .number {
-        color: #594CC4;
-        font-size: 20px;
-    }   
-
-    .quiz__question .ask {
-        display: inline;
-        font-size: 20px;
-    }   
-
-    .quiz__answer {
-        border-top: 6px ridge #cacaca;
-        padding: 10px;
-        background-color: #f5f5f5;
-    }   
-
-    .quiz__answer .confirm {
-        border: 6px ridge #cacaca;
-        width: 100%;
-        font-size: 22px;
-        padding: 13px 20px;
-        background-color: #d6d6d6;
-        font-family: "Cafe24Dangdanghae";
-        cursor: pointer;
-    }   
-
-    .quiz__answer .result {
-        width: 100%;
-        font-size: 22px;
-        line-height: 1.2;
-        padding: 13px 20px;
-        border: 6px ridge #cacaca;
-        box-sizing: border-box;
-        text-align: center;
-        font-family: "Cafe24Dangdanghae";
-    }   
-
-    .quiz__answer .input {
-        width: 100%;
-        border: 6px ridge #cacaca;
-        font-size: 22px;
-        padding: 13px 20px;
-        background-color: #fff;
-        font-family: "Cafe24Dangdanghae";
-        margin-bottom: 10px;
-    }   
-
-    .quiz__view {
-        background-color: #f5f5f5;
-        font-family: "Cafe24Dangdanghae";
-        position: relative;
-        overflow: hidden;
-    }
-    .quiz__view .true {
-        width: 120px;
-        height: 120px;
-        line-height: 120px;
-        background-color: #594CC4;
-        color: #fff;
-        border-radius: 50%;
-        text-align: center;
-        position: absolute;
-        left: 70%;
-        top: 100px;
-        opacity: 0;
-    }
-    .quiz__view .false {
-        width: 120px;
-        height: 120px;
-        line-height: 120px;
-        background-color: #fff;
-        border-radius: 50%;
-        text-align: center;
-        position: absolute;
-        right: 70%;
-        top: 100px;
-        opacity: 0;
-    }
-    .quiz__view.like .true {
-        opacity: 1;
-        animation: wobble 0.6s;
-    }
-    .quiz__view.dislike .false {
-        opacity: 1;
-        animation: wobble 0.6s;
-    }   
-
-    .quiz__selects {
-        margin: 5px 0;
-    }
-    .quiz__selects label {
-        display: flex;
-    }
-    .quiz__selects label input {
-        position: absolute;
-        left: -9999px;
-    }
-    .quiz__selects label span {
-        font-size: 20px;
-        line-height: 1.3;
-        font-family: "Cafe24Dangdanghae";
-        padding: 10px;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        border-radius: 10px;
-        cursor: pointer;
-    }
-    .quiz__selects label span::before {
-        content: '';
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        background: #fff;
-        margin-right: 15px;
-        display: flex;
-        flex-shrink: 0;
-        box-shadow: inset 0px 0px 0px 3px #d4d4d4;
-        transition: all 0.25s;
-    }
-    .quiz__selects label input:checked + span {
-        background-color: #e1ddfa;
-    }
-    .quiz__selects label input:checked + span::before {
-        box-shadow: inset 0px 0px 0px 8px #c0b9f5;
-    }
-    .quiz__confirm {
-        width: 100%;
-        text-align: center;
-    }
-    .quiz__confirm .check {
-        font-size: 22px;
-        line-height: 1.2;
-        padding: 13px 40px;
-        border: 6px ridge #cacaca;
-        box-sizing: border-box;
-        text-align: center;
-        font-family: "Cafe24Dangdanghae";
-        cursor: pointer;
-        margin: 40px 0;
-        transition: background 0.3s;
-    }
-    .quiz__confirm .check:hover {
-        background: #5a4cc488;
-        color: #fff;
-    }
+<pre><code class="language-js">
 </code></pre>
                             </div>
                         </div>
