--- a/javascript/effect/quizeffect05.html
+++ b/javascript/effect/quizeffect05.html
@@ -169,306 +169,17 @@
 
                         <div class="cont">
                             <div class="active">
-<pre><code class="language-js">    // 선택자
-    const quizWrap = document.querySelector(".quiz__wrap");
-    let quizScore = "";
-
-    // 문체 출력
-    const updateQuiz = () => {
-        const exam = [];
-        quizInfo.forEach((question, number) => {
-            exam.push(`
-                &lt;div class="quiz">
-                    &lt;span class="quiz__type">${question.answerType}&lt;/span>
-                    &lt;h2 class="quiz__question">
-                        &lt;span class="number">${question.answerNum}. &lt;/span>
-                        &lt;div class="ask">${question.answerAsk}&lt;/div>
-                    &lt;/h2>
-                    &lt;div class="quiz__view">
-                        &lt;div class="true">정답입니다.&lt;/div>
-                        &lt;div class="false">오답입니다.&lt;/div>
-                        &lt;div class="dog">
-                            &lt;div class="head">
-                                &lt;div class="ears">&lt;/div>
-                                &lt;div class="face">&lt;/div>
-                                &lt;div class="eyes">
-                                    &lt;div class="teardrop">&lt;/div>
-                                &lt;/div>
-                                &lt;div class="nose">&lt;/div>
-                                &lt;div class="mouth">
-                                    &lt;div class="tongue">&lt;/div>
-                                &lt;/div>
-                                &lt;div class="chin">&lt;/div>
-                            &lt;/div>
-                            &lt;div class="body">
-                                &lt;div class="tail">&lt;/div>
-                                &lt;div class="legs">&lt;/div>
-                            &lt;/div>
-                        &lt;/div>
-                    &lt;/div>
-                    &lt;div class="quiz__answer">
-                        &lt;div class="quiz__selects">
-                            &lt;label for="select1${number}">
-                                &lt;input type="radio" id="select1${number}" class="select" name="select${number}" value="1">
-                                &lt;span class="choice">${question.answerChoice[1]}&lt;/span>
-                            &lt;/label>
-                            &lt;label for="select2${number}">
-                                &lt;input type="radio" id="select2${number}" class="select" name="select${number}" value="2">
-                                &lt;span class="choice">${question.answerChoice[2]}&lt;/span>
-                            &lt;/label>
-                            &lt;label for="select3${number}">
-                                &lt;input type="radio" id="select3${number}" class="select" name="select${number}" value="3">
-                                &lt;span class="choice">${question.answerChoice[3]}&lt;/span>
-                            &lt;/label>
-                            &lt;label for="select4${number}">
-                                &lt;input type="radio" id="select4${number}" class="select" name="select${number}" value="4">
-                                &lt;span class="choice">${question.answerChoice[4]}&lt;/span>
-                            &lt;/label>
-                        &lt;/div>
-                    &lt;/div>
-                &lt;/div>
-            `);
-        });
-
-        exam.push(`
-                &lt;div class="quiz__confirm">
-                    &lt;button class="check">정답 확인하기&lt;/button>
-                    &lt;div class="ex">&lt;/div>
-                &lt;/div>
-        `);
-        quizWrap.innerHTML = exam.join('');
-    }
-    updateQuiz();
-
-    // 정답 확인
-    const answerQuiz = () => {
-        const quizSelects = document.querySelectorAll(".quiz__selects");    // 객관식
-
-        // 사용자가 체크한 보기 == 문제 정답
-        quizInfo.forEach((question, number) => {
-            const quizSelectsWrap = quizSelects[number];                    
-            const userSelector = `input[name=select${number}]:checked`;         // 사용자가 체크한 것
-            const userAnswer = (quizSelectsWrap.querySelector(userSelector) || {}).value    // 정답 체크를 안했어도 or를 이용해 출력한다.
-            const quizView = document.querySelectorAll(".quiz__view");     // 강아지
-            
-            console.log(userAnswer)
-
-            if(userAnswer == question.answerResult) {
-                console.log("정답");
-                quizView[number].classList.add("like");
-                quizScore++;
-
-            } else {
-                console.log("오답");
-                quizView[number].classList.add("dislike");
-                const divBox = document.createElement("div");
-                quizSelectsWrap.appendChild(divBox).innerHTML = `&lt;p class="result">${question.answerEx}&lt;p>`
-            }
-        });
-
-        // 전체 문제 수
-        console.log(quizInfo.length)
-
-        // 내가 맞힌 수
-        console.log(quizScore)
-
-        document.querySelector(".quiz__confirm .ex").innerHTML = `${quizScore} / ${quizInfo.length} 화이팅`;
-        
-    }
-
-    // 정답 클릭
-    document.querySelector(".quiz__confirm .check").addEventListener("click", answerQuiz);
+<pre><code class="language-js">
 </code></pre>
                             </div>
 
                             <div>
-<pre><code class="language-js">    exam.push(``) 메서드 안에 존재
+<pre><code class="language-js">
 </code></pre>
                             </div>
 
                             <div>
-<pre><code class="language-js">    .quiz__wrap {
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
-        margin-top: 50px;
-        margin-bottom: 150px;
-        flex-wrap: wrap;
-    }   
-
-    .quiz {
-        max-width: 500px;
-        width: 100%;
-        background-color: #fff;
-        border: 8px ridge #cacaca;
-        margin: 10px;
-    }   
-
-    .quiz__type {
-        background-color: #cacaca;
-        text-align: center;
-        display: block;
-        font-size: 16px;
-        border: 3px ridge #cacaca;
-        color: #3b3b3b;
-        font-family: "DungGeunMo";
-        padding: 4px;
-    }   
-
-    .quiz__question {
-        border-top: 6px ridge #cacaca;
-        border-bottom: 6px ridge #cacaca;
-        padding: 20px;
-        font-family: "Cafe24Dangdanghae";
-        line-height: 1.3;
-    }   
-
-    .quiz__question .number {
-        color: #594CC4;
-        font-size: 20px;
-    }   
-
-    .quiz__question .ask {
-        display: inline;
-        font-size: 20px;
-    }   
-
-    .quiz__answer {
-        border-top: 6px ridge #cacaca;
-        padding: 10px;
-        background-color: #f5f5f5;
-    }   
-
-    .quiz__answer .confirm {
-        border: 6px ridge #cacaca;
-        width: 100%;
-        font-size: 22px;
-        padding: 13px 20px;
-        background-color: #d6d6d6;
-        font-family: "Cafe24Dangdanghae";
-        cursor: pointer;
-    }   
-
-    .quiz__answer .result {
-        width: 100%;
-        font-size: 22px;
-        line-height: 1.2;
-        padding: 13px 20px;
-        border: 6px ridge #cacaca;
-        box-sizing: border-box;
-        text-align: center;
-        font-family: "Cafe24Dangdanghae";
-    }   
-
-    .quiz__answer .input {
-        width: 100%;
-        border: 6px ridge #cacaca;
-        font-size: 22px;
-        padding: 13px 20px;
-        background-color: #fff;
-        font-family: "Cafe24Dangdanghae";
-        margin-bottom: 10px;
-    }   
-
-    .quiz__view {
-        background-color: #f5f5f5;
-        font-family: "Cafe24Dangdanghae";
-        position: relative;
-        overflow: hidden;
-    }
-    .quiz__view .true {
-        width: 120px;
-        height: 120px;
-        line-height: 120px;
-        background-color: #594CC4;
-        color: #fff;
-        border-radius: 50%;
-        text-align: center;
-        position: absolute;
-        left: 70%;
-        top: 100px;
-        opacity: 0;
-    }
-    .quiz__view .false {
-        width: 120px;
-        height: 120px;
-        line-height: 120px;
-        background-color: #fff;
-        border-radius: 50%;
-        text-align: center;
-        position: absolute;
-        right: 70%;
-        top: 100px;
-        opacity: 0;
-    }
-    .quiz__view.like .true {
-        opacity: 1;
-        animation: wobble 0.6s;
-    }
-    .quiz__view.dislike .false {
-        opacity: 1;
-        animation: wobble 0.6s;
-    }   
-
-    .quiz__selects {
-        margin: 5px 0;
-    }
-    .quiz__selects label {
-        display: flex;
-    }
-    .quiz__selects label input {
-        position: absolute;
-        left: -9999px;
-    }
-    .quiz__selects label span {
-        font-size: 20px;
-        line-height: 1.3;
-        font-family: "Cafe24Dangdanghae";
-        padding: 10px;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        border-radius: 10px;
-        cursor: pointer;
-    }
-    .quiz__selects label span::before {
-        content: '';
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        background: #fff;
-        margin-right: 15px;
-        display: flex;
-        flex-shrink: 0;
-        box-shadow: inset 0px 0px 0px 3px #d4d4d4;
-        transition: all 0.25s;
-    }
-    .quiz__selects label input:checked + span {
-        background-color: #e1ddfa;
-    }
-    .quiz__selects label input:checked + span::before {
-        box-shadow: inset 0px 0px 0px 8px #c0b9f5;
-    }
-    .quiz__confirm {
-        width: 100%;
-        text-align: center;
-    }
-    .quiz__confirm .check {
-        font-size: 22px;
-        line-height: 1.2;
-        padding: 13px 40px;
-        border: 6px ridge #cacaca;
-        box-sizing: border-box;
-        text-align: center;
-        font-family: "Cafe24Dangdanghae";
-        cursor: pointer;
-        margin: 40px 0;
-        transition: background 0.3s;
-    }
-    .quiz__confirm .check:hover {
-        background: #5a4cc488;
-        color: #fff;
-    }
+<pre><code class="language-js">
 </code></pre>
                             </div>
                         </div>
