--- a/project/html/board/boardWrite.html
+++ b/project/html/board/boardWrite.html
@@ -78,37 +78,38 @@
     <!-- boardWrite -->
     <section id="boardWrite">
         <div class="board__wrap container">
-            <h3>제목 :</h3>
-            <div class="board__write">                
-                <div class="Option">
-                    <select name="searchOption" id="searchOption1" class="Write__option">
-                        <option value="Category">CATEGORY</option>
-                    </select>
-                    <select name="searchOption" id="searchOption2" class="Write__option">
-                        <option value="Date">파일 첨부</option>
-                    </select>
-                    <select name="searchOption" id="searchOption2" class="Write__option">
-                        <option value="Date">HTML</option>
-                    </select>
-                    <select name="searchOption" id="searchOption2" class="Write__option">
-                        <option value="Date">글꼴 선택</option>
-                    </select>
-                    <select name="searchOption" id="searchOption2" class="Write__option">
-                        <option value="Date">글 불러오기</option>
-                    </select>
-                    <span class="button"><a href="#">임시저장</a></span>                            
+            <form action="">
+                <legend class="ir">게시판 영역입니다.</legend>
+                <div class="border_titleBox">
+                    <div class="titleBox">
+                        <label for="boardTitle">제목 : </label>
+                        <input type="text" name="boardTitle" id="boardTitle" maxlength="30" required>
+                    </div>
+                    <div class="border_titleCate">
+                        <div class="selectBox">
+                            <select name="boardCate" id="boardCate">
+                                <option value="카테고리1">카테고리1</option>
+                                <option value="카테고리2">카테고리2</option>
+                                <option value="카테고리3">카테고리3</option>
+                            </select>
+                        </div>
+                        <div class="imgAttachBox">
+                            <label for="boardImg">Image</label>
+                            <input type="file" name="boardImg" id="boardImg" accept=".jpg, .jpeg, .png, .gif, .webp" placeholder="jpg, jpeg, png, gif, webp 파일만 첨부해주세요.">
+                        </div>
+                    </div>
                 </div>
-                <div class="image">
-                    <img src="../../asset/img/dogImage.jpg" alt="강아지 사진">
-                </div>   
-            </div>
-        <div class="board__contents">
-            <p>가는 투명하되 현저하게 있는가? 우리의 있을 목숨이 수 그들에게 있는가? 싹이 원질이 너의 있음으로써 이것이다. 안고, 청춘 어디 싹이 너의 가치를 가진 피다. 눈이 인생의 인생을 이상은 있으며, 하는 것이다. 공자는 열락의 피가 쓸쓸하랴? 되는 원대하고, 청춘 같이, 그것을 쓸쓸하랴? 자신과 풀밭에 눈이 그들의 못할 있으며, 소리다.이것은 같은 투명하되 이것이다. 있는 구하기 이 능히 것이다.</p>
-            <div class="button2">
-                <a href="#">작성 완료 </a>
-                <a href="#">취소</a>
-            </div>            
-        </div>
+                <div class="board_writeBox">
+                    <label for="boardWriteCont" class="ir">내용</label>
+                    <textarea name="boardWriteCont" id="boardWriteCont" placeholder="글을 작성해주세요." required></textarea>
+                </div>
+                <div class="board_btn">
+                    <button type="submit" value="저장하기">작성 완료</button>
+                    <span>|</span>
+                    <span><a href="board.html">취소</a></span>
+                </div>
+            </form>
+
         </div>        
     </section>
     <!-- //boardWrite -->
