--- a/javascript/javascript07.html
+++ b/javascript/javascript07.html
@@ -53,6 +53,83 @@
                 <li><a href="#">01. 수학 메서드 : Math.abs() : 절대값 반환 : 반환(숫자)</a></li>
                 <li><a href="#">01. 수학 메서드 : Math.trulc() : 값의 정수 부분만 반환 : 반환(숫자)</a></li>
                 <li><a href="#">01. 수학 메서드 : Math.random() : 랜덤값 반환(0~1 사이에 난수 값을 반환) : 반환(숫자)</a></li>
+            </ul>
+        </div>
+
+        <!-- 01 -->
+        <div id="sample01" class="sample">
+            <h3>01. 수학 메서드 : Math.random() : 0과 1 사이에 난수 값을 반환 : 반환 (숫자)</h3>
+            <div class="table">
+                <table>
+                    <colgroup>
+                        <col style="width: 5%">
+                        <col style="width: 32%">
+                        <col style="width: 13%">
+                        <col style="width: 13%">
+                        <col style="width: 27%">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>번호</th>
+                            <th>기본값</th>
+                            <th>메서드</th>
+                            <th>리턴값</th>
+                            <th>클릭</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="sample01_N1"></td>
+                            <td class="sample01_Q1"></td>
+                            <td class="sample01_M1"></td>
+                            <td class="sample01_P1"></td>
+                            <td class="sample01_B1"><button>Click</button></td>
+                        </tr>
+                        <tr>
+                            <td class="sample01_N2"></td>
+                            <td class="sample01_Q2"></td>
+                            <td class="sample01_M2"></td>
+                            <td class="sample01_P2"></td>
+                            <td class="sample01_B2"><button>Click</button></td>
+                        </tr>
+                        <tr>
+                            <td class="sample01_N3"></td>
+                            <td class="sample01_Q3"></td>
+                            <td class="sample01_M3"></td>
+                            <td class="sample01_P3"></td>
+                            <td class="sample01_B3"><button>Click</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="script">
+<pre><code class="language-js">document.querySelector(".sample01_N1").innerHTML = 1;
+document.querySelector(".sample01_Q1").innerHTML = "0 ~ 1";
+document.querySelector(".sample01_M1").innerHTML = "Math.random()";
+document.querySelector(".sample01_P1").style.color = "black";
+document.querySelector(".sample01_B1").addEventListener("click", () => {
+    document.querySelector(".sample01_P1").innerHTML = Math.random();
+})
+
+document.querySelector(".sample01_N2").innerHTML = 2;
+document.querySelector(".sample01_Q2").innerHTML = "0 ~ 9";
+document.querySelector(".sample01_M2").innerHTML = "Math.random()";
+document.querySelector(".sample01_P2").style.color = "black";
+document.querySelector(".sample01_B2").addEventListener("click", () => {
+    document.querySelector(".sample01_P2").innerHTML = Math.floor(Math.random() * 10);
+})
+
+document.querySelector(".sample01_N3").innerHTML = 3;
+document.querySelector(".sample01_Q3").innerHTML = "10 ~ 19";
+document.querySelector(".sample01_M3").innerHTML = "Math.random()";
+document.querySelector(".sample01_P3").style.color = "black";
+document.querySelector(".sample01_B3").addEventListener("click", () => {
+    document.querySelector(".sample01_P3").innerHTML = 10 + Math.floor(Math.random() * 10);
+})
+</code></pre>
+            </div>
+        </div>
+
     </main>
     <!-- //main -->
 
@@ -63,5 +140,32 @@
 
     <script src="assets/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
+
+    <script>
+        // 01
+        document.querySelector(".sample01_N1").innerHTML = 1;
+        document.querySelector(".sample01_Q1").innerHTML = "0 ~ 1";
+        document.querySelector(".sample01_M1").innerHTML = "Math.random()";
+        document.querySelector(".sample01_P1").style.color = "black";
+        document.querySelector(".sample01_B1").addEventListener("click", () => {
+            document.querySelector(".sample01_P1").innerHTML = Math.random();
+        })
+
+        document.querySelector(".sample01_N2").innerHTML = 2;
+        document.querySelector(".sample01_Q2").innerHTML = "0 ~ 9";
+        document.querySelector(".sample01_M2").innerHTML = "Math.random()";
+        document.querySelector(".sample01_P2").style.color = "black";
+        document.querySelector(".sample01_B2").addEventListener("click", () => {
+            document.querySelector(".sample01_P2").innerHTML = Math.floor(Math.random() * 10);
+        })
+
+        document.querySelector(".sample01_N3").innerHTML = 3;
+        document.querySelector(".sample01_Q3").innerHTML = "10 ~ 19";
+        document.querySelector(".sample01_M3").innerHTML = "Math.random()";
+        document.querySelector(".sample01_P3").style.color = "black";
+        document.querySelector(".sample01_B3").addEventListener("click", () => {
+            document.querySelector(".sample01_P3").innerHTML = 10 + Math.floor(Math.random() * 10);
+        })
+    </script>
 </body>
 </html>
