--- a/project/html/board/board.html
+++ b/project/html/board/board.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판 메인</title>
 
-    <link rel="stylesheet" href="../../asset/css/reset.css">
-    <link rel="stylesheet" href="../../asset/css/common.css">
-    <link rel="stylesheet" href="../../asset/css/font.css">
-
-    <link rel="stylesheet" href="../../asset/css/header.css">
-    <link rel="stylesheet" href="../../asset/css/loginBanner.css">
-    <link rel="stylesheet" href="../../asset/css/boardType.css">
-    <link rel="stylesheet" href="../../asset/css/imageType.css">
-    <link rel="stylesheet" href="../../asset/css/footerType.css">
+    <link rel="stylesheet" href="../asset/css/reset.css">
+    <link rel="stylesheet" href="../asset/css/common.css">
+    <link rel="stylesheet" href="../asset/css/font.css
+    <link rel="stylesheet" href="../asset/css/header.css">
+    <link rel="stylesheet" href="../asset/css/loginBanner.css">
+    <link rel="stylesheet" href="../asset/css/boardType.css">
+    <link rel="stylesheet" href="../asset/css/imageType.css">
+    <link rel="stylesheet" href="../asset/css/footerType.css">
 
 </head>
 
