--- a/javascript/effect/parallaxEffect07.html
+++ b/javascript/effect/parallaxEffect07.html
@@ -530,7 +530,7 @@
                 }
             })
 
-            document.querySelector(".scrollTop span").innerText = Math.round(scrollTop);
+            document.querySelector(".scroll span").innerText = Math.round(scrollTop);
             requestAnimationFrame(scroll);
         }
         scroll();
